...
              icon: _ProfileIcon(),
              onTap: onTap,
            ),
            _NavItem(
              index: 1,
              currentIndex: currentIndex,
              label: 'MEDICAÇÃO',
              icon: _MedsIcon(),
              onTap: onTap,
            ),
            _NavItem(
              index: 2,
              currentIndex: currentIndex,
...
